--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -7,5 +7,6 @@ write_source_files(
     files = {
         "README.md": "//bootstrap:readme",
         "stage_1.sh.md": "//bootstrap:stage_1_md",
+        "hz.sh.md": "//bootstrap:hz_sh_md",
     },
 )
